--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Nunito" rel="stylesheet">
   <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<script type="text/javascript" src="script1.js"></script>
+
+<div id="main">
+  <button class="openbtn" onclick="openNav()">&#9776;</button> 
+</div>
+<img src="me.jpg" alt="Profile Photo" id="my_pic">
+<h1 id="name">Tallis Bowers</h1>
+<p id="bio_main">Here is a short bit about me.</p>
+
+<div id="mySidebar" class="sidebar">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Services</a>
+  <a href="#">Clients</a>
+  <a href="#">Contact</a>
+</div>
+
+
 </body>
 </html>
