--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
+  <a href="index.html">Home</a>
+  <a href="hobbies.html">Hobbies/Interests</a>
   <a href="#">Clients</a>
   <a href="#">Contact</a>
 </div>
